Create master branch via GitHub

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
       <h1>
 <a id="visgithubio" class="anchor" href="#visgithubio" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>vis.github.io</h1>
 
-<p>可视化学习博客</p>
+<p>可视化学习博客
+Haha</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/stonestar/vis.github.io"> stonestar的可视化学习博客</a> is maintained by <a href="https://github.com/stonestar">stonestar</a>.</span>
